fix buttons when on mobile

--- a/assets/sass/buttons/_buttons.sass
+++ b/assets/sass/buttons/_buttons.sass
@@ -45,10 +45,10 @@
  padding: .25em 2.5em
  font-size: 1.25rem
  cursor: pointer
-
-.btn-lg
-  padding: 15px 50px
-  // font-size: 1.25rem
+ @media screen and (max-width: 767px)
+  display: block
+  font-size: 1rem
+  padding: 1.25em .5em
 
 .btn-sm
   padding: .25em .5em
